# bot-status

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  docker-compose.yml
migrations/: 20231114102155_bot.sql
src/: discord.rs  main.rs  utils.rs
