[package]
name = "bot-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
